<?xml version="1.0" encoding="utf-8"?>
<resources>
    // App Wide        <string name="version">Version 0.01 <i>beta</i></string>
    <string name="app_name">SSA</string>
    <string name="action_settings">Settings</string>
    <string name="ssa_name"><b>Smart Safety Alert</b></string>
    <string name="rst_name"><b>Ride Safer Technologies</b></string>
    <string name="by">by </string>
    // User Manual        <string name="title_activity_user__manual_">User_Manual_Activity</string>
    <string name="action_user_manual">User Manual</string>
    // About Screen        <string name="title_activity_about_main">SSA</string>
    <string name="status"><b><u>Status</u></b></string>
    <string name="bluetooth_connection"><b>Bluetooth:</b></string>
    <string name="is_bluetooth_connection_true">Connected</string>
    <string name="is_bluetooth_connection_false">Disconnected</string>
    <string name="child_in_seat"><b>Child in Car-Seat:</b></string>
    <string name="is_child_in_seat_true">In Seat</string>
    <string name="is_child_in_seat_false">Not In Seat</string>
    <string name="temp_threshold"><b>Temperature Threshold:</b></string>
    <string name="is_temp_threshold_true">Within Threshold</string>
    <string name="is_temp_threshold_false">Threshold Surpassed</string>
    <string name="battery_status">Battery Status:</string>
    <string name="about_screen_explanation">The <i><b>Smart Safety Alert (SSA)</b></i> system will
        alert you when you disconnect or are disconnected from your SSA hardware via Bluetooth while
        a child is still detected in the car-seat.</string>
    <string name="about_screen_explanation_part_2">Use the options under the Settings in the menu to
        configure the SSA system.</string>
    // Team        <string name="creators"><b>Created by:</b></string>
    <string name="_Albert" translatable="false">Albert Vintayen</string>
    <string name="_Curtis" translatable="false">Curtis McLaws</string>
    <string name="_Ryan" translatable="false">Ryan Mainard</string>
    <string name="_Victoria" translatable="false">Victoria Cizevska</string>
    <string name="new_message_notification_title_template">New message: %1$s</string>
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="persistent__notification_title_template">"Persistent ": %1$s</string>
    <string name="persistent__notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
    // URL        <string name="fileURL">file:///android_asset/UserManual.html</string>
    // Alerts and Notifications        <string name="bluetooth_alert_title">Bluetooth Verification</string>
    <string name="bluetooth_alert_message">The Bluetooth is turned off. The SSA App requires that
    this be turned on in order to function properly.</string>
    <string name="bluetooth_alert_positive">Open Settings</string>
    <string name="bluetooth_alert_negative">Cancel</string>
    <string name="Dismiss">Dismiss</string>
    <string name="Snooze">Snooze</string>
    <string name="Full_Screen_White">Full_Screen_White</string>
    <string name="Full_Screen_Black">Full_Screen_Black</string>
    <string name="title_activity_full__screen__alarm">Full_Screen_Alarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="btString"></string>
    <string name="title_activity_ssa__dialog__alert">SSA_Dialog_Alert</string>
    <string name="ChildInCar">Alert! Your \nChild is Still \nIn The Car!</string>

</resources>
