<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ridesafertechnologies.ssa.util.SSA_Dialog_Alert"
    android:background="#47ffffff"
    android:orientation="vertical"
    android:weightSum="100"
    android:gravity="bottom"
    android:measureWithLargestChild="true"
    android:visibility="visible"
    android:accessibilityLiveRegion="assertive"
    android:baselineAligned="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:textAlignment="gravity"
    android:touchscreenBlocksFocus="false">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ChildInCar"
        android:id="@+id/textView"
        android:layout_weight="0.46"
        android:textStyle="bold|italic"
        android:textSize="50sp"
        android:textAlignment="center"
        android:typeface="normal"
        android:padding="30dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Snooze"
        android:id="@+id/button4"
        android:onClick="snooze"
        android:textSize="25sp"
        android:textColor="#ffffffff"
        android:backgroundTint="#ff1115ff" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Dismiss"
        android:id="@+id/button3"
        android:onClick="dismiss"
        android:textSize="25sp"
        android:textColor="#ffffffff"
        android:background="#ffff070c" />

</LinearLayout>
