<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ridesafertechnologies.ssa.User_Manual_Activity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/appNameTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:text="@string/ssa_name"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/appNameTextView"
        android:id="@+id/hr_title"
        android:background="@color/black_overlay" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/companyNameTextView"
        android:layout_below="@id/hr_title"
        android:layout_centerHorizontal="true"
        android:text="@string/rst_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/by"
        android:layout_below="@id/appNameTextView"
        android:layout_toLeftOf="@id/companyNameTextView"
        android:layout_toStartOf="@id/companyNameTextView"
        android:layout_alignBaseline="@id/companyNameTextView"
        android:paddingRight="2dp"
        android:paddingLeft="2dp"
        android:text="@string/by"
        android:textSize="13sp"
        android:textStyle="normal"/>

    <WebView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/user_manual_web_view"
        android:layout_marginTop="@dimen/abc_text_size_body_1_material"
        android:layout_below="@id/companyNameTextView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarStyle="insideInset"

        />

</RelativeLayout>
